--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,4 @@ target_link_libraries(DirectoryMonitor -fsanitize=address)
 
 # Add the testing executable
 add_executable(test_DirControlPolicy tests/DirectoryPolicyTest.cpp src/DirControlPolicy.cpp)
-add_executable(test_DirCleanUpPolicy tests/CleanUpPolicyTest.cpp src/DirCleanUpPolicy.cpp)
+add_executable(test_DeletePolicy tests/DeletePolicyTest.cpp src/DeletePolicy.cpp)
