link experimental::filesystem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,12 @@ file(GLOB project_SRCS src/*.cpp) #src/*.h
 
 # Add project executable
 add_executable(DirectoryMonitor ${project_SRCS})
+
+# check for memory leak
 target_link_libraries(DirectoryMonitor -fsanitize=address)
+
+# link experimental library
+target_link_libraries(DirectoryMonitor stdc++fs)
 
 # Add the testing executable
 add_executable(test_DirControlPolicy tests/DirectoryPolicyTest.cpp src/DirControlPolicy.cpp)
